--- a/FinPlan.Web/Components/App.razor
+++ b/FinPlan.Web/Components/App.razor
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="@Assets["app.css"]" />
     <link rel="stylesheet" href="@Assets["FinPlan.Web.styles.css"]" />
     <ImportMap />
-    <title>WealthyFii</title>
+    <title>REWealthen</title>
     <link rel="icon" type="image/svg+xml" href="images/wealthyfyx-logo.svg" />
     <HeadOutlet />
 </head>
