--- a/FinPlan.Web/Components/Pages/Home.razor
+++ b/FinPlan.Web/Components/Pages/Home.razor
@@ -1,13 +1,13 @@
 ﻿@page "/"
 
-<PageTitle>WealthyFii - Financial Planning Made Easy</PageTitle>
+<PageTitle>REWealthen - Financial Planning Made Easy</PageTitle>
 
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-8 mx-auto">
             <div class="jumbotron bg-primary text-white rounded p-5 mb-4">
                 <h1 class="display-4">Welcome to REWealthen</h1>
-                <p class="lead">Your comprehensive financial planning companion. Plan your savings, track your growth, and achieve your financial goals with WealthyFii.</p>
+                <p class="lead">Your comprehensive financial planning companion. Plan your savings, track your growth, and achieve your financial goals with REWealthen.</p>
                 <hr class="my-4 border-light">
                 <p>Get started by using our savings calculator to see how your money can grow over time.</p>
                 <a class="btn btn-light btn-lg" href="/wealth-journey" role="button">
